<resources>
    <string name="app_name">fireTrade</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_token">Token</string>
    <string name="prompt_search">Buscar</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Correo electrónico no válido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Los permisos del contacto son necesarios"</string>
    <string name="prompt_footer">"Vigilado Superfinanciera</string>
    <string name="prompt_copyright">Powered by firefly-e.com</string>
    <string name="prompt_searchError">Campo requerido para la busqueda</string>
    <string name="chart_day">1d</string>
    <string name="chart_week">7d</string>
    <string name="chart_month">30d</string>
    <string name="chart_trimester">90d</string>
    <string name="chart_semester">180d</string>
    <string name="top_news">Principales Noticias</string>
    <string name="equity_detail">Detalle Acción</string>
    <string name="action_buy">Comprar</string>
    <string name="user_balance">Mi Saldo: </string>
    <string name="user_valued_portfolio">Mi Portafolio: </string>
    <string name="buy_quantity">Cantidad:</string>
    <string name="buy_market_price">Precio Ofertado:</string>
    <string name="buy_total">Total:</string>
    <string name="buy_confirm_title">Confirmacion</string>
    <string name="buy_confirm">Esta seguro que quiere comprar ?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="buying">Compra</string>
    <string name="selling">Venta</string>
    <string name="equity_list_title">Listado de acciones</string>
    <string name="equity_detail_title">Detalle de acciones</string>
    <string name="portfolio_title">Detalle portafolio</string>
    <string name="buy_euity_title">Comprar acción</string>
    <string name="order_status_title">Estado ordenes</string>
    <string name="sell_equity_title">Vender acción</string>


    <string name="welcome">Bienvenido</string>

    <string name="menu_help">Ayuda</string>
    <string name="menu_config">Configuracion</string>
    <string name="menu_security">Seguridad</string>
    <string name="menu_logout">Salir</string>

    <string name="sell_quantity">Cantidad:</string>
    <string name="sell_market_price">Precio Venta:</string>
    <string name="sell_total">Total:</string>
    <string name="sell_confirm_title">Confirmacion</string>
    <string name="sell_confirm">Esta seguro que quiere vender ?</string>
    <string name="sell_available_quantity">Cantidad disponible:</string>

    <string name="title_activity_sell_equity">SellEquityActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_new_client1">Aun no eres cliente ?</string>
    <string name="login_new_client2">Crea una cuenta no nosotros</string>
    <string name="login_forgot_password">Olvidaste la contraseña ?</string>


    <!-- Demo Dummy strings -->
    <string name="dummy_user_portfolio_value">$250,056,225.00</string>
    <string name="dummy_user_balance">$105,056,225.00</string>
    <string name="dummy_date">10-10-2016</string>
    <string name="dummy_hour">10:45 am</string>
    <string name="dummy_news_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="dummy_news_2">Uis nostrud exercitation ullamco laboris nisi ut aliquip </string>
    <string name="dummy_news_3">Nemo enim ipsam voluptatem quia voluptas sit aspernatur </string>
    <string name="dummy_news_4">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</string>
    <string name="dummy_news_5">Nemo enim ipsam voluptatem quia voluptas sit aspernatur </string>
    <array name="dummy_equities">
        <item>PFBCOLOM</item>
        <item>ECOPETROL</item>
        <item>PFDAVVNDA</item>
        <item>BCOLOMBIA</item>
        <item>PFAVAL</item>
        <item>MINEROS</item>
        <item>EXITO</item>
        <item>ODINSA</item>
        <item>EEB</item>
        <item>BVC</item>
        <item>OCCIDENTE</item>
        <item>PFCEMARGOS</item>
        <item>CNEC</item>
        <item>ISA</item>
        <item>FABRICATO</item>
        <item>ETB</item>
        <item>ISAGEN</item>
        <item>PFAVH</item>
    </array>

</resources>
