<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_balance"
            android:icon="@mipmap/ic_balance"
            android:title="@string/dummy_user_balance" />
        <item
            android:id="@+id/menu_portfolio"
            android:icon="@mipmap/ic_portfolio"
            android:title="@string/dummy_user_portfolio_value" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/menu_help"
                android:icon="@mipmap/ic_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/menu_config"
                android:icon="@mipmap/ic_config"
                android:title="@string/menu_config" />
            <item
                android:id="@+id/menu_security"
                android:icon="@mipmap/ic_security"
                android:title="@string/menu_security" />
            <item
                android:id="@+id/menu_logout"
                android:icon="@mipmap/ic_exit"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
