<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="co.com.firefly.daviviendatrade.EquityDetail">
    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@color/colorPrimary"
                android:id="@+id/return_button"
                android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/equity_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_detail"
        android:layout_marginTop="@dimen/app_header_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:foregroundGravity="center_horizontal"
                android:columnCount="1"
                android:rowCount="7"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFA500"
                    android:text="@string/equity_detail"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" /-->

                <TextView
                    android:id="@+id/equityNameDetail"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:gravity="center_horizontal"
                    android:textColor="#FFA500"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/equityChart"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/chart"
                    android:layout_height="@dimen/chart" />

                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_margin="2dp"
                        android:text="@string/chart_day"
                        android:background="#ECECEC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:layout_margin="2dp"
                        android:text="@string/chart_week"
                        android:background="#ECECEC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:layout_margin="2dp"
                        android:text="@string/chart_month"
                        android:background="#ECECEC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:layout_margin="2dp"
                        android:text="@string/chart_trimester"
                        android:background="#ECECEC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:layout_margin="2dp"
                        android:text="@string/chart_semester"
                        android:background="#ECECEC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <ImageButton
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white_pure"
                    android:src="@mipmap/ic_buy"
                    android:id="@+id/detail_equity_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/top_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/equityNewsFeed"
                    android:scrollbars="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </GridLayout>

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>