<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.com.firefly.daviviendatrade.BuyEquity">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/ic_shoping_cart"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/buy_equity_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFA500"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/user_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/buy_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buy_quantity"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/buy_market_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buy_market_price"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_total"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/buy_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

        <ImageButton
            android:id="@+id/buy_action"
            android:src="@mipmap/ic_buy"
            android:background="@color/white_pure"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>
